--- a/About me.html
+++ b/About me.html
@@ -14,6 +14,8 @@
 	<center><a href=http://www.laketalonca.com/gallery-2/"> Image found here</center></a> 
 
 	<p><center>My name is Grace, I'm a Canadian citizen and I enjoy reading, drawing, and watching documentaries.</center> </p>
+	<p><center>Some of my likes are: photography, traveling, and camping.</center></p>
+	<p><center>Some of my dislikes are: heights, olives, and messes.</p></center>
 </body>
 
 </html>
