--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 
 	<h1> Grace's ICS20 Portfolio</h1> 
-	<a href= "D:\ICS2O Grace\HTML\About me.html"> About me </a>
+	<a href= "About me.html"> About me </a>
 </body> 
 </html>
