--- a/About me.html
+++ b/About me.html
@@ -3,10 +3,9 @@
 
 <head>
 	<title>ABOUT ME</title>
-</head>
+</head><b
 
-<body>
-	
+<body>ody background= "http://images.itemsearch.edelight.biz/resized/normal/350/l2x5619eczvtgfiu.jpg">	
 	<h2 style="font-size:100px;"> <h2 style="color:grey;"><center>About me</center></h2>
 	<h1 style="font-size:50px;"> <h1 style="color:maroon;"><center>Grace</center></h1>
 	 
